--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "redux": "^5.0.1",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   },
